lidarr/service.yml
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: lidarr
spec:
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 8686
  selector:
    app: lidarr
  type: LoadBalancer
