lidarr/ingress-route.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: lidarr-ingressroute
  namespace: lidarr
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`lidarr.anasjabri.com`)
      kind: Rule
      services:
      - name: lidarr
        port: 8080
      middlewares:
      - name: basic-auth
        namespace: kube-system
      - name: redirect-scheme
        namespace: kube-system
  tls:
    secretName: lidarr.anasjabri.com-tls
